--- a/ncov-ny/ny_profiles/ny/builds.yaml
+++ b/ncov-ny/ny_profiles/ny/builds.yaml
@@ -9,8 +9,8 @@ custom_rules:
 
 inputs:
   - name: gisaid
-    metadata: "data/metadata.tsv.gz"
-    filtered: "data/filtered_gisaid.fasta.xz"
+    metadata: "/vortexfs1/omics/env-bio/collaboration/env_bio_covid/data/preselected/metadata.tsv.gz"
+    filtered: "/vortexfs1/omics/env-bio/collaboration/env_bio_covid/data/preselected/filtered_gisaid.fasta.xz"
   - ny:
     metadata: "data/ny_metadata.tsv"
     sequences: "data/ny_sequences.fasta"
