--- a/ncov-ny/ny_profiles/ny/input.yaml
+++ b/ncov-ny/ny_profiles/ny/input.yaml
@@ -1,7 +1,8 @@
 
 inputs:
   - name: gisaid
-    metadata: "data/metadata.tsv.gz"
+    metadata: "/vortexfs1/omics/env-bio/collaboration/env_bio_covid/data/preselected/metadata.tsv.gz"
+    filtered: "/vortexfs1/omics/env-bio/collaboration/env_bio_covid/data/preselected/filtered_gisaid.fasta.xz"
    # sequences: "s3://nextstrain-ncov-private/sequences.fasta.gz"
    # Uncomment outputs to start the pipeline at that stage.
    # E.g. if you uncomment `filtered` then the pipeline
@@ -12,10 +13,9 @@ inputs:
    # aligned: "s3://nextstrain-ncov-private/aligned_gisaid.fasta.xz"
     #to-exclude: "https://data.nextstrain.org/files/ncov/open/to-exclude_gisaid.txt.xz"
     #masked: "https://data.nextstrain.org/files/ncov/open/masked_gisaid.fasta.xz"
-    filtered: "data/filtered_gisaid.fasta.xz"
   - name: ny
     metadata: "data/ny_metadata.tsv"
     sequences: "data/ny_sequences.fasta"
   - name: reference
-    metadata: "../ncov/data/wuhan_reference.metadata.tsv"
-    sequences: "../ncov/data/wuhan_reference.sequences.fasta"
+    metadata: "/vortexfs1/omics/env-bio/collaboration/env_bio_covid/data/reference_genomes/wuhan_hu_1/wuhan_reference.metadata.tsv"
+    sequences: "/vortexfs1/omics/env-bio/collaboration/env_bio_covid/data/reference_genomes/wuhan_hu_1/wuhan_reference.sequences.fasta"
